Updated  structure