@@ -4,10 +4,12 @@ package com.app.service;
 import com.app.exception.InvalidWorkshopDataException;
 import com.app.exception.WorkshopAlreadyExistException;
 import com.app.exception.WorkshopNotFoundException;
-import com.app.model.dto.WorkshopDto;
-import com.app.model.dto.WorkshopUpdateDto;
+import com.app.model.entity.Registrations;
+import com.app.model.request.WorkshopRequest;
+import com.app.model.request.WorkshopUpdateRequest;
 import com.app.model.entity.Workshop;
 import com.app.model.mapper.WorkshopMapper;
+import com.app.model.response.WorkshopResponse;
 import com.app.repository.WorkshopRepository;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
@@ -16,7 +18,11 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.time.ZonedDateTime;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 
 /**
@@ -29,9 +35,9 @@ public class WorkshopService {
 
     // Repository for accessing workshop data
     private final WorkshopRepository workshopRepository;
-    // Mapper for converting between Workshop and WorkshopDto
+    // Mapper for converting between Workshop and WorkshopRequest
     private final WorkshopMapper workshopMapper;
-    // Service for managing workshop registrations
+
     private final WorkshopRegistrationService workshopRegistrationService;
 
     /**
@@ -39,11 +45,11 @@ public class WorkshopService {
      *
      * @return a list of all upcoming workshops
      */
-    public List<WorkshopDto> getUpcomingWorkshops() {
+    public List<WorkshopResponse> getUpcomingWorkshops() {
         ZonedDateTime now = ZonedDateTime.now(); // Get the current date and time
         return workshopRepository.findAll().stream()
                 .filter(workshop -> workshop.getEndTime().isAfter(now)) // Filter out past workshops
-                .map(workshopMapper::WorkshopToWorkshopDto)
+                .map(workshopMapper::WorkshopToWorkshopWithoutRegistrationsResponse) // Map to WorkshopSummaryResponse
                 .toList();
     }
 
@@ -52,32 +58,39 @@ public class WorkshopService {
      *
      * @return a list of all workshops
      */
-    public List<WorkshopDto> getAllWorkshops() {
+
+    public List<WorkshopResponse> getAllWorkshops() {
         log.debug("Getting all workshop details for admin ");
-        return workshopRepository.findAll().stream()
-                .map(workshopMapper::WorkshopToWorkshopDto)
-                .toList();
+        List<Workshop> workshops = workshopRepository.findAll();
+        if (workshops == null) {
+            return Collections.emptyList();
+        }
+        //TODO
+        // Create defensive copies of workshops and their registrations
+        return workshops.stream()
+                .map(workshopMapper::WorkshopToWorkshopWithoutRegistrationsResponse)
+                .collect(Collectors.toList());
     }
 
     /**
      * Creates a new Workshop. The workshop code must not yet exist in the database.
      *
-     * @param workshopDto the workshop data to create
+     * @param workshopRequest the workshop data to create
      * @return the created Workshop
      * @throws WorkshopAlreadyExistException if the workshop with the same code already exists
      * @throws InvalidWorkshopDataException  if the start time is after the end time
      */
-    public WorkshopDto createWorkshop(WorkshopDto workshopDto) {
-        log.debug("Check if workshop already exists {}", workshopDto.getCode());
-        checkWorkshopExist(workshopDto.getCode());
+    public WorkshopRequest createWorkshop(WorkshopRequest workshopRequest) {
+        log.debug("Check if workshop already exists {}", workshopRequest.getCode());
+        checkWorkshopExist(workshopRequest.getCode());
         // Check if the start time is before the end time
-        if (workshopDto.getStartTime() == null || workshopDto.getEndTime() == null) {
+        if (workshopRequest.getStartTime() == null || workshopRequest.getEndTime() == null) {
             throw new InvalidWorkshopDataException("Start /End time must be specified");
         }
-        if (workshopDto.getStartTime().isAfter(workshopDto.getEndTime())) {
+        if (workshopRequest.getStartTime().isAfter(workshopRequest.getEndTime())) {
             throw new InvalidWorkshopDataException("Start time must be before end time");
         }
-        return saveWorkshop(workshopDto);
+        return saveWorkshop(workshopRequest);
     }
 
     /**
@@ -95,14 +108,14 @@ public class WorkshopService {
     /**
      * Saves a workshop to the database.
      *
-     * @param workshopDto the workshop data to save
+     * @param workshopRequest the workshop data to save
      * @return the saved Workshop
      */
     @Transactional
-    private WorkshopDto saveWorkshop(WorkshopDto workshopDto) {
-        final Workshop workshopToSave = workshopMapper.WorkshopDtoToWorkshop(workshopDto);
+    private WorkshopRequest saveWorkshop(WorkshopRequest workshopRequest) {
+        final Workshop workshopToSave = workshopMapper.WorkshopRequestToWorkshop(workshopRequest);
         Workshop savedWorkshop = workshopRepository.save(workshopToSave);
-        return workshopMapper.WorkshopToWorkshopDto(savedWorkshop);
+        return workshopMapper.WorkshopToWorkshopRequest(savedWorkshop);
     }
 
     /**
@@ -111,10 +124,12 @@ public class WorkshopService {
      * @param code the code of the workshop to retrieve
      * @return the workshop with the given code
      */
-    public WorkshopDto getWorkshopByCode(String code) {
+    public WorkshopResponse getWorkshopByCode(String code) {
         Workshop workshop = workshopRepository.findByCode(code)
                 .orElseThrow(() -> new WorkshopNotFoundException("Workshop not found with given code: " + code));
-        return workshopMapper.WorkshopToWorkshopDto(workshop);
+        //TODO
+        WorkshopResponse workshopResponse = workshopMapper.WorkshopToWorkshopWithoutRegistrationsResponse(workshop);
+        return workshopResponse;
     }
 
 
@@ -130,7 +145,7 @@ public class WorkshopService {
         if (workshopRegistrationService.getRegistrationsByCode(workshopCode).size() > 0) {
             throw new InvalidWorkshopDataException("Cannot delete workshop with registrations");
         }
-        workshopRepository.delete(workshop);
+       workshopRepository.delete(workshop);
         log.info("Workshop with code {} deleted successfully", workshopCode);
     }
 
@@ -138,83 +153,84 @@ public class WorkshopService {
      * Updates a workshop by its code.
      *
      * @param workshopCode the code of the workshop to update
-     * @param workshopDto  the new workshop data
+     * @param workshopUpdateRequest  the new workshop data
      * @return the updated workshop
      */
     @Transactional
-    public WorkshopDto updateWorkshop(String workshopCode, WorkshopUpdateDto workshopDto) {
+    public WorkshopResponse updateWorkshop(String workshopCode, WorkshopUpdateRequest workshopUpdateRequest) {
         Workshop workshop = workshopRepository.findByCode(workshopCode)
                 .orElseThrow(() -> new WorkshopNotFoundException("Workshop not found with given code: " + workshopCode));
-        return updateData(workshop, workshopDto);
+        return updateData(workshop, workshopUpdateRequest);
     }
 
     /**
      * Updates the workshop data.
      *
      * @param workshop    the workshop to update
-     * @param workshopDto the new workshop data
+     * @param workshopUpdateRequest the new workshop data
      * @return the updated workshop
      */
-    private WorkshopDto updateData(Workshop workshop, WorkshopUpdateDto workshopDto) {
+    private WorkshopResponse updateData(Workshop workshop, WorkshopUpdateRequest workshopUpdateRequest) {
         log.info("Updating workshop with code {}", workshop.getCode());
-        if (StringUtils.isNotBlank(workshopDto.getName())) {
-            workshop.setName(workshopDto.getName());
+        if (StringUtils.isNotBlank(workshopUpdateRequest.getName())) {
+            workshop.setName(workshopUpdateRequest.getName());
         }
-        if (StringUtils.isNotBlank(workshopDto.getDescription())) {
-            workshop.setDescription(workshopDto.getDescription());
+        if (StringUtils.isNotBlank(workshopUpdateRequest.getDescription())) {
+            workshop.setDescription(workshopUpdateRequest.getDescription());
         }
-        if (workshopDto.getCapacity() != null && workshopDto.getCapacity() >= 0) {
+        if (workshopUpdateRequest.getCapacity() != null && workshopUpdateRequest.getCapacity() >= 0) {
             //TODO check existing registrations and add error while changing capacity
-            workshop.setCapacity(workshopDto.getCapacity());
+            workshop.setCapacity(workshopUpdateRequest.getCapacity());
         }
-        if (workshopDto.getStartTime() != null && workshopDto.getEndTime() != null) {
-            validateStartAndEndDate(workshopDto);
-            workshop.setStartTime(workshopDto.getStartTime());
-            workshop.setEndTime(workshopDto.getEndTime());
+        if (workshopUpdateRequest.getStartTime() != null && workshopUpdateRequest.getEndTime() != null) {
+            validateStartAndEndDate(workshopUpdateRequest);
+            workshop.setStartTime(workshopUpdateRequest.getStartTime());
+            workshop.setEndTime(workshopUpdateRequest.getEndTime());
         } else {
-            validateStartOrEndTime(workshop, workshopDto);
+            validateStartOrEndTime(workshop, workshopUpdateRequest);
         }
         Workshop updatedWorkshop = workshopRepository.save(workshop);
-        return workshopMapper.WorkshopToWorkshopDto(updatedWorkshop);
+        //TODO
+        return workshopMapper.WorkshopToWorkshopWithoutRegistrationsResponse(updatedWorkshop);
     }
 
     /**
      * Validates the start or end time of the workshop.
      *
      * @param workshop    the workshop to validate
-     * @param workshopDto the new workshop data
+     * @param workshopUpdateRequest the new workshop data
      */
-    private static void validateStartOrEndTime(Workshop workshop, WorkshopUpdateDto workshopDto) {
-        if (workshopDto.getStartTime() != null) {
-            if (workshopDto.getStartTime().isBefore(ZonedDateTime.now())) {
+    private static void validateStartOrEndTime(Workshop workshop, WorkshopUpdateRequest workshopUpdateRequest) {
+        if (workshopUpdateRequest.getStartTime() != null) {
+            if (workshopUpdateRequest.getStartTime().isBefore(ZonedDateTime.now())) {
                 throw new InvalidWorkshopDataException("Start time must be in the future");
             }
-            workshop.setStartTime(workshopDto.getStartTime());
+            workshop.setStartTime(workshopUpdateRequest.getStartTime());
         }
-        if (workshopDto.getEndTime() != null) {
-            if (workshopDto.getEndTime().isBefore(ZonedDateTime.now())) {
+        if (workshopUpdateRequest.getEndTime() != null) {
+            if (workshopUpdateRequest.getEndTime().isBefore(ZonedDateTime.now())) {
                 throw new InvalidWorkshopDataException("End time must be in future ");
             }
-            if (workshopDto.getEndTime().isBefore(workshopDto.getStartTime())) {
+            if (workshopUpdateRequest.getEndTime().isBefore(workshopUpdateRequest.getStartTime())) {
                 throw new InvalidWorkshopDataException("End time must be after start time");
             }
-            workshop.setEndTime(workshopDto.getEndTime());
+            workshop.setEndTime(workshopUpdateRequest.getEndTime());
         }
     }
 
     /**
      * Validates the start and end date of the workshop.
      *
-     * @param workshopDto the new workshop data
+     * @param workshopUpdateRequest the new workshop data
      */
-    private static void validateStartAndEndDate(WorkshopUpdateDto workshopDto) {
-        if (workshopDto.getStartTime().isBefore(ZonedDateTime.now())) {
+    private static void validateStartAndEndDate(WorkshopUpdateRequest workshopUpdateRequest) {
+        if (workshopUpdateRequest.getStartTime().isBefore(ZonedDateTime.now())) {
             throw new InvalidWorkshopDataException("Start time must be in the future");
         }
-        if (workshopDto.getEndTime().isBefore(ZonedDateTime.now())) {
+        if (workshopUpdateRequest.getEndTime().isBefore(ZonedDateTime.now())) {
             throw new InvalidWorkshopDataException("End time must be in future ");
         }
-        if (workshopDto.getEndTime().isBefore(workshopDto.getStartTime())) {
+        if (workshopUpdateRequest.getEndTime().isBefore(workshopUpdateRequest.getStartTime())) {
             throw new InvalidWorkshopDataException("End time must be after start time");
         }
     }
